[project]
name = "VulnPublisherPro"
version = "0.1.0"
description = "Comprehensive vulnerability intelligence and content publishing platform"
authors = [
    {name = "RafalW3bCraft", email = ""}
]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.13.5",
    "click>=8.2.1",
    "feedparser>=6.0.11",
    "flask>=3.1.2",
    "inquirer>=3.4.1",
    "openai>=1.101.0",
    "psycopg2-binary>=2.9.10",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "schedule>=1.2.2",
    "trafilatura>=2.0.0",
    "tweepy>=4.16.0",
]
